3/C6/Arquitectura/Practica4/k8s/notifications.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notifications-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notifications-service
  template:
    metadata:
      labels:
        app: notifications-service
    spec:
      containers:
      - name: notifications
        image: notifications-service:latest
        imagePullPolicy: Never
