3/C6/Arquitectura/Practica4/k8s/broker.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: broker-deployment
spec:
  serviceName: broker-service
  replicas: 1
  selector:
    matchLabels:
      app: broker
  template:
    metadata:
      labels:
        app: broker
    spec:
      containers:
      - name: broker
        image: broker-mom:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 5555
        volumeMounts:
        - name: broker-storage
          mountPath: /app/storage
      volumes:
      - name: broker-storage
        persistentVolumeClaim:
          claimName: broker-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: broker-service
spec:
  selector:
    app: broker
  ports:
    - protocol: TCP
      port: 5555
      targetPort: 5555
